Testate e funzionanti chiamate in merito alle segnalazioni e alle richieste di supporto